<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_wall</name>
  <version>0.0.1</version>
  
  <description>Tiago follows the wall</description>

  <maintainer email="gdl@gmail.com">Grupo Dia Libre</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
   
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
